# outlook-backend-python

./: README.md  TODO_captcha_progress.md  TODO_first_last_name_fix.md  pyproject.toml
src/outlook_backend_python/: main.py
src/outlook_backend_python/handlers/: captcha.py  form.py
src/outlook_backend_python/helpers/: browser.py  input.py
src/outlook_backend_python/utils/: constants.py  detection.py  helpers.py  storage.py
