[build-system]
requires = ["uv>=0.1.0", "uv_build"]
build-backend = "uv_build"

[project]
name = "outlook-backend-python"
version = "1.0.0"
description = "Automated Outlook account creation with SeleniumBase"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "seleniumbase>=4.25.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pyautogui>=0.9.0",
    "pillow>=10.0.0",
]

[project.scripts]
outlook-create = "src.main:main"

[tool.uv]
dev-dependencies = []
